--- a/package.json
+++ b/package.json
@@ -36,14 +36,12 @@
     "clean-css": "0.3.x",
     "async": "0.1.x",
     "rsvp": "^3.0.4",
-    "mkdirp": "^0.3.5"
+    "mkdirp": "^0.3.5",
+    "shelljs": "^0.4.0"
   },
   "readme": "ERROR: No README data found!",
   "readmeFilename": "README.md",
   "_id": "broccoli-kss@0.0.7",
   "_shasum": "02588254bad18905159b2cab50a503ada90bb469",
-  "_from": "broccoli-kss@latest",
-  "devDependencies": {
-    "shelljs": "^0.4.0"
-  }
+  "_from": "broccoli-kss@latest"
 }
