--- a/package.json
+++ b/package.json
@@ -23,21 +23,22 @@
   },
   "homepage": "https://github.com/habdelra/broccoli-kss",
   "dependencies": {
-    "broccoli-writer": "^0.1.1",
-    "kss": "latest",
-    "marked": "0.1.x",
-    "natural": "0.0.65",
-    "handlebars": "1.0.5beta",
-    "wrench": "1.3.x",
-    "less": "1.x.x",
-    "stylus": "0.30.x",
-    "sass": "0.5.x",
-    "optimist": "0.3.x",
-    "clean-css": "0.3.x",
     "async": "0.1.x",
-    "rsvp": "^3.0.4",
+    "broccoli-writer": "^0.1.1",
+    "clean-css": "0.3.x",
+    "handlebars": "1.0.5beta",
+    "kss": "latest",
+    "less": "1.x.x",
+    "marked": "0.1.x",
     "mkdirp": "^0.3.5",
-    "shelljs": "^0.4.0"
+    "natural": "0.0.65",
+    "optimist": "0.3.x",
+    "rsvp": "^3.0.4",
+    "sass": "0.5.x",
+    "shelljs": "^0.4.0",
+    "stylus": "0.30.x",
+    "sync-exec": "^0.5.0",
+    "wrench": "1.3.x"
   },
   "readme": "ERROR: No README data found!",
   "readmeFilename": "README.md",
