--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
   "dependencies": {
     "async": "^0.1.22",
     "broccoli-writer": "^0.1.1",
-    "clean-css": "0.3.x",
+    "ember-router-generator": "^0.3.2",
     "handlebars": "1.0.5beta",
     "kss": "latest",
-    "less": "1.x.x",
     "marked": "0.1.x",
     "mkdirp": "^0.3.5",
     "natural": "0.0.65",
@@ -37,9 +36,7 @@
     "rsvp": "^3.0.4",
     "sass": "0.5.x",
     "shelljs": "^0.4.0",
-    "stylus": "0.30.x",
-    "sync-exec": "^0.5.0",
-    "wrench": "1.3.x"
+    "colors": "^1.0.3"
   },
   "readme": "ERROR: No README data found!",
   "readmeFilename": "README.md",
